Fixed off-by-one digit error in toFixed(). Already fixed in trunk.

BUG: 144115

svn path=/branches/KDE/3.5/kdelibs/; revision=656293