kjs/number_object.cpp
@@ -241,7 +241,7 @@ Value NumberProtoFuncImp::call(ExecState *exec, Object &thisObj, const List &arg
     UString m = integer_part_noexp(n);
 
     int k = m.size();
-    if (m.size() < f) {
+    if (k <= f) {
       UString z = "";
       for (int i = 0; i < f+1-k; i++)
 	z += "0";
